[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/styles/scrollcontainer.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/styles/fontStyle.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/img/X.png" type="Texture" id=3]
[ext_resource path="res://scripts/AddCelula.gd" type="Script" id=4]
[ext_resource path="res://assets/styles/ButtonNormalStyle.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/styles/textFontStyle.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/styles/ButtonSelectedStyle.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.282353, 0.792157, 0.894118, 1 )

[node name="novaCelula" type="Node2D"]
position = Vector2( 296.946, 159.778 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -297.0
margin_top = -160.0
margin_right = 1069.0
margin_bottom = 609.0
color = Color( 0, 0, 0, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 152.0
margin_top = 121.0
margin_right = 652.0
margin_bottom = 347.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 303.922
margin_top = 127.0
margin_right = 533.922
margin_bottom = 157.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Adicionar nova c√©lula"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line" type="Panel" parent="."]
anchor_top = -0.000235653
anchor_bottom = -0.000235653
margin_left = 151.0
margin_top = 160.039
margin_right = 653.0
margin_bottom = 164.039
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="TextureButton" parent="."]
margin_left = 620.0
margin_top = 132.0
margin_right = 639.0
margin_bottom = 150.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="procarionte" type="Button" parent="."]
margin_left = 180.0
margin_top = 189.0
margin_right = 280.0
margin_bottom = 241.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Procarionte"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eucarionte" type="Button" parent="."]
margin_left = 306.224
margin_top = 189.0
margin_right = 406.224
margin_bottom = 241.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Eucarionte"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animal" type="Button" parent="."]
visible = false
margin_left = 180.982
margin_top = 266.137
margin_right = 280.982
margin_bottom = 318.137
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Animal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vegetal" type="Button" parent="."]
visible = false
margin_left = 306.427
margin_top = 269.254
margin_right = 406.427
margin_bottom = 321.254
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Vegetal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="adicionar" type="Button" parent="."]
margin_left = 550.035
margin_top = 307.035
margin_right = 650.035
margin_bottom = 344.035
custom_fonts/font = ExtResource( 6 )
text = "+ Adicionar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="procarionte" to="." method="_on_procarionte_pressed"]
[connection signal="pressed" from="eucarionte" to="." method="_on_eucarionte_pressed"]
[connection signal="pressed" from="animal" to="." method="_on_animal_pressed"]
[connection signal="pressed" from="vegetal" to="." method="_on_vegetal_pressed"]
[connection signal="pressed" from="adicionar" to="." method="_on_adicionar_pressed"]
